# MazeApplication

./: CMakeLists.txt
include/: MainWindow.h  Maze.h  MazeConfigurationGui.h  MazeGenerator.h  MazeWidget.h  SystemInfo.h
include/cuda/: kernel.cu
include/generators/: CpuPrimGenerator.h
src/: Maze.cpp  SystemInfo.cpp  main.cpp
src/gui/: MainWindow.cpp  MazeConfigurationGui.cpp  MazeWidget.cpp
src/maze/: MazeGenerator.cpp
src/maze_cpu/: CpuPrimGenerator.cpp  DfsGeneratorCpu.cpp
src/maze_generation_cpu/: DfsGeneratorCpu.cpp
test/: MazeTest.cpp  testSystemInfo.cpp
